--- a/src/rss/build.gradle
+++ b/src/rss/build.gradle
@@ -9,5 +9,7 @@ repositories {
 
 dependencies {
     compile group: 'com.rometools', name: 'rome', version: '1.7.0'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
