--- a/src/rss/build.gradle
+++ b/src/rss/build.gradle
@@ -10,6 +10,7 @@ repositories {
 dependencies {
     compile group: 'com.rometools', name: 'rome', version: '1.7.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
+    compile group: 'com.syncthemall', name: 'boilerpipe', version: '1.2.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
